# libnemesi

./: .gitignore  00pl  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  bootstrap  config.h.in  configure  configure.ac  configure.in  libnemesi.pc.in  mkinstalldirs  nemesi.spec  startup  svnrev.h
E-gui/: Makefile.am  Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  e-gui.glade  mkinstalldirs
E-gui/e-gui/: NeMeSun36.xpm
E-gui/macros/: Makefile.in
E-gui/nemesi/: Makefile.am  Makefile.in  get_egui.c  get_rtsp_args.c  gui_buff_dial.c  gui_play_throbber.c  gui_sys_buff_dial.c  gui_throbber.c  init_main.c  init_rtsp_args.c  ourhdr.h  txtprintf.c  update_toolbar.c
E-gui/po/: ChangeLog  e-gui.pot
E-gui/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
decoder/: Makefile.am  Makefile.in  dec_clean.c  dec_create.c  dec_destroy.c  dec_idle.c  decoder.c  decoder2.c
decoder/L16_8k_m/: L16-8k-m.c  Makefile.am  Makefile.in
decoder/gsm_amr_float/: Makefile.am  Makefile.in  gsm-amr-float.c  interf_dec.c  interf_dec.h  interf_rom.h  rom_dec.h  sp_dec.c  sp_dec.h  typedef.h
decoder/libffmp3/: Makefile.am  Makefile.in  ffmp3.c
decoder/libffmpeg/: Makefile.am  Makefile.in  ffmpeg.c  ffmpeg.h  init_ffmpeg.c
decoder/libffmpeg4/: Makefile.am  ffmpeg4.c  ffmpeg4.h  init_ffmpeg4.c
decoder/mp3/: Makefile.am  Makefile.in  common.c  dct64_i386.c  decode_i386.c  huffman.h  interface.c  layer3.c  mp3.c  mpg123.h  mpglib.h  tabinit.c
decoder/mp3stub/: Makefile  Makefile.am  Makefile.in  check_head.c  mp3stub.c
decoder/mpglib/: Makefile.am  Makefile.in  VbrTag.c  VbrTag.h  common.c  common.h  dct64_i386.c  dct64_i386.h  decode_i386.c  decode_i386.h  huffman.h  interface.c  interface.h  l2tables.h  layer1.c  layer1.h  layer2.c  layer2.h  (+7 more)
docs/: Makefile.am  Makefile.in  nemesi.1
egui/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  cc_statw.c  gnmsprint.c  gnmsprint.h  gui.c  gui_cc.h  gui_statusbar.c  gui_statusbar.h  gui_throbber.c  gui_throbber.h  gui_url.c  gui_url.h  interface.c  interface.h  nemesi-gui.glade  nemesi-gui.glade.bak  nemesi-gui.gladep  support.c  support.h
etui/: Makefile.am  Makefile.in  edit_pref.c  get_infos.c  list_prefs.c  parse_cl.c  parse_main_cl.c  parse_prompt.c  parse_ui_cl.c  send_close.c  send_open.c  send_pause.c  send_play.c  seturlname.c  throbber.c  tui_event.c  ui.c
example/: Makefile.am  dump_info.c  dump_stream.c  loop_stream.c
libNeMeSI/: Makefile.am
libnms/: AUTHORS  ChangeLog  CodingStyle  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  libnms.pc.in  nemesi.spec  svnrev.h
plugins/: Makefile.am  Makefile.in
rtcp/: Makefile.am  Makefile.in  build_rtcp_rr.c  build_rtcp_sdes.c  handle_rtcp_event.c  parse_rtcp_app.c  parse_rtcp_bye.c  parse_rtcp_pkt.c  parse_rtcp_rr.c  parse_rtcp_sdes.c  parse_rtcp_sr.c  rtcp.c  rtcp_app.c  rtcp_build_rr.c  rtcp_build_sdes.c  rtcp_bye.c  rtcp_clean.c  rtcp_clean_events.c  rtcp_deschedule.c  rtcp_events.c  rtcp_handle_event.c  rtcp_hdr_val_chk.c  rtcp_interval.c  rtcp_parse_app.c  rtcp_parse_bye.c  rtcp_parse_pkt.c  rtcp_parse_rr.c  rtcp_parse_sdes.c  rtcp_parse_sr.c  rtcp_recv.c  rtcp_report.c  rtcp_schedule.c  rtcp_sdes.c  rtcp_send_bye.c  rtcp_send_rr.c  rtcp_set_ssrc_sdes.c  rtcp_thread_create.c  rtcp_utils.c  send_rtcp_bye.c  send_rtcp_rr.c  (+1 more)
rtp/: Makefile.am  Makefile.in  init_rtp_sess.c  init_seq.c  rtcp_to_connect.c  rtp.c  rtp_active_ssrc_queue.c  rtp_announce_pt.c  rtp_buffer.c  rtp_clean.c  rtp_dynpt_reg.c  rtp_fill_buffer.c  rtp_fill_buffers.c  rtp_get_fps.c  rtp_get_n_pkt.c  rtp_get_next_pt.c  rtp_get_next_ts.c  rtp_get_pkt.c  rtp_hdr_val_chk.c  rtp_init.c  rtp_init_seq.c  rtp_next_active_ssrc.c  rtp_payload_type.c  rtp_recv.c  rtp_rm_pkt.c  rtp_session.c  rtp_session_init.c  rtp_ssrc_check.c  rtp_ssrc_init.c  rtp_ssrc_queue.c  rtp_thread.c  rtp_thread_create.c  rtp_transport.c  rtp_transport_get.c  rtp_transport_set.c  rtp_transport_wrappers.c  rtp_update_seq.c  rtpptdefs.c  set_stm_src.c  ssrc_check.c  (+1 more)
rtsp/: Makefile.am  Makefile.in  body_exists.c  check_response.c  check_status.c  close_cmd.c  close_rtsp.c  full_msg_rcvd.c  get_curr_sess.c  get_transport_str.c  get_transport_str_sctp.c  get_transport_str_tcp.c  get_transport_str_udp.c  handle_get_response.c  handle_pause_response.c  handle_play_response.c  handle_rtsp_pkt.c  handle_setup_response.c  handle_teardown_response.c  init_rtsp.c  init_state.c  open_cmd.c  pause_cmd.c  play_cmd.c  playing_state.c  ready_state.c  recording_state.c  reinit_rtsp.c  remove_pkt.c  rtsp.c  rtsp_clean.c  rtsp_close.c  rtsp_errors.c  rtsp_get_rtp_queue.c  rtsp_get_rtp_th.c  rtsp_handlers.c  rtsp_info_print.c  rtsp_infos.c  rtsp_init.c  rtsp_internals.c  (+32 more)
sdp/: Makefile.am  sdp_attr.c  sdp_media_destroy.c  sdp_media_setup.c  sdp_parse_m_descr.c  sdp_session_close.c  sdp_session_destroy.c  sdp_session_setup.c  sdp_set_attr.c
src/: Makefile.am  Makefile.in  add_avail_pref.c  edit_avail_pref.c  edit_pref.c  get_pref.c  init_rtsp_args.c  list_prefs.c  load_plugins.c  main.c  nmsOpen.c  nms_close.c  nms_open.c  nms_play.c  nmserror.c  nmsprint.c  nmsprintf.c  nmsstatusprintf.c  output_init.c  output_uninit.c  pref2ccmask.c  random32.c  rem_avail_pref.c  statustostr.c  strcmpcase.c  strdup.c  strncmpcase.c  strstrcase.c  timeval_add.c  timeval_subtract.c  uierror.c  uiprintf.c  unload_plugins.c  urltokenize.c
utils/: Makefile.am  f2time.c  nms_header.c  nmsprint.c  random32.c  strcmpcase.c  strdup.c  strncmpcase.c  strstrcase.c  timeval.c  timeval_add.c  timeval_subtract.c  transport.c  uierror.c  uiprintf.c  urltokenize.c  w32utils.c
wsocket/: Makefile.am  Makefile.in  addr_ntop.c  addrcmp.c  gethostinfo.c  nmst_close.c  nmst_init.c  nmst_is_active.c  nmst_read.c  nmst_write.c  server_connect.c  server_create.c  sock_cmp_addr.c  sock_cmp_port.c  sock_get_addr.c  sock_get_port.c  sock_ntop_host.c  sock_set_addr.c  sock_set_port.c  sockaddrcmp.c  sockaddrdup.c  tcp_open.c  tcp_read.c  tcp_write.c
(+554 files in other folders)
